--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bottom Nevigatiuon Menu</title>
+    <title> Nevigatiuon Menu</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/eef0fc11a2.js" crossorigin="anonymous"></script>
 </head>
